# RazorsLambda

./: LICENSE  razors-lambda.cabal
example/: Factorial.rzl
src/: Main.hs  Main_client.hs  RazorsLambda.hs
src/RazorsLambda/: AST.hs  Eval.hs  Interactive.hs  PP.hs  Parser.hs  TypeCheck.hs
src/RazorsLambda/Interactive/: IO.hs  JSON.hs
