name:                razors-lambda
version:             1.0.0
license:             BSD3
license-file:        LICENSE
author:              Adam C. Foltzer
maintainer:          acfoltzer@galois.com
category:            Language
build-type:          Simple
cabal-version:       >=1.10

executable razors-lambda
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      src
  default-language:    Haskell2010