name:                razors-lambda
version:             1.0.0
license:             BSD3
license-file:        LICENSE
author:              Adam C. Foltzer
maintainer:          acfoltzer@galois.com
category:            Language
build-type:          Simple
cabal-version:       >=1.10

executable razors-lambda
  main-is:             Main.hs
  build-depends:       aeson
                     , annotated-wl-pprint
                     , base >=4.8 && <4.9
                     , containers >= 0.5
                     , lens >= 4.9
                     , monadLib
                     , parsers >= 0.12
                     , text >= 1.2
                     , transformers >= 0.4
                     , trifecta
                     , unordered-containers >= 0.2
  hs-source-dirs:      src
  default-language:    Haskell2010