name:                razors-lambda
version:             1.0.0
license:             BSD3
license-file:        LICENSE
author:              Adam C. Foltzer
maintainer:          acfoltzer@galois.com
category:            Language
build-type:          Simple
cabal-version:       >=1.10

executable razors-lambda
  main-is:             Main.hs
  build-depends:       aeson
                     , annotated-wl-pprint
                     , ansi-wl-pprint >= 0.6
                     , attoparsec >= 0.13
                     , base >=4.8 && <4.9
                     , bytestring >= 0.10
                     , containers >= 0.5
                     , free >= 4.12
                     , lens >= 4.9
                     , monadLib
                     , parsers >= 0.12
                     , text >= 1.2
                     , transformers >= 0.4
                     , trifecta
                     , unordered-containers >= 0.2
                     , zeromq4-haskell >= 0.6
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts